--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,59 @@
     opacity: 1;
   }
 }
+
+/* styles.css */
+.lead {
+  position: relative;
+  display: inline-block;
+  font-size: 24px;
+}
+
+.lead:before,
+.lead:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: yellow;
+  bottom: -5px;
+  animation: lineFluctuation 2s infinite ease-in-out;
+}
+
+.button-with-arrow {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button-with-arrow::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 10px solid #fff;
+  transform: translateY(-50%);
+}
+
+@keyframes lineFluctuation {
+  0%,
+  100% {
+    width: 0;
+    opacity: 0;
+  }
+  50% {
+    width: 100%;
+    opacity: 1;
+  }
+}
